@@ -384,8 +384,9 @@ coxsurv.fit2 <- function (ctype, stype, se.fit, varmat, cluster,
 multihaz <- function(y, x, position, weight, risk, transition, ctype, stype, 
                      hfill, cmap, x2, risk2, vmat, nstate, se.fit, p0, utime) {
     if (ncol(y) ==2) {
-       sort1 <- seq.int(nrow(y))   # any order will be the same
-       y <- cbind(0.0, y)          # add a start.time column
+       sort1 <- seq.int(0, nrow(y)-1L)   # sort order for a constant
+       y <- cbind(-1.0, y)               # add a start.time column, -1 in case
+                                         #  there is an event at time 0
     }
     else sort1 <- order(transition, y[,1]) -1L
     sort2 <- order(transition, y[,2]) -1L
